--- a/comparacao_pct.html
+++ b/comparacao_pct.html
@@ -579,7 +579,7 @@
             
             <div class="footer">
                 <p>Documento elaborado em <span id="current-date"></span></p>
-                <p>Desenvolvedor Low-Code - Especialista em Flutter & Firebase</p>
+                <p>Bruno Maykon - Especialista em Flutter & Firebase</p>
             </div>
         </div>
     </div>
